# Wakey

./: .gitignore  Cargo.toml  DIPS-wal  Network Persistent State  README.md  machineid
Crashpad/: client_id
Local Storage/leveldb/: LOG
Shared Dictionary/cache/index-dir/: the-real-index
scripts/: install.sh
src/: main.rs
src/modules/: daemon.rs  mod.rs  monitor.rs
